# oaas-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  MST_REFACTORING_SUMMARY.md  README.adoc  deploy-test.yaml  dev.Dockerfile  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.r2.yml  docker-compose.release.yml  docker-compose.yml  example-package.yaml  justfile  package-lock.json  reference.adoc  remove_impl.txt
commons/oprc-config/: Cargo.toml
commons/oprc-config/src/: lib.rs  loader.rs  types.rs  validation.rs
commons/oprc-cp-storage/: Cargo.toml
commons/oprc-cp-storage/src/: error.rs  lib.rs  traits.rs  unified.rs
commons/oprc-cp-storage/tests/: etcd_integration.rs
commons/oprc-dp-storage/: Cargo.toml  README.adoc
commons/oprc-dp-storage/benches/: bench_batch_operations.rs  bench_concurrent_operations.rs  bench_get_operations.rs  bench_mixed_workload.rs  bench_object_blob_vs_entry_scan.rs  bench_put_operations.rs  bench_scan_operations.rs  bench_snapshot_operations.rs  bench_transaction_operations.rs  storage_backend.rs
commons/oprc-dp-storage/src/: any_storage.rs  atomic_stats.rs  config.rs  error.rs  factory.rs  lib.rs  raft_integration.rs  snapshot.rs  specialized.rs  storage_value.rs  traits.rs  zero_copy.rs
commons/oprc-grpc/: Cargo.toml  build.rs
commons/oprc-grpc/proto/: common.proto  deployment.proto  deployment_types.proto  health.proto  oprc-data.proto  oprc-invoke.proto  oprc-route.proto  package.proto  runtime.proto  topology.proto
commons/oprc-grpc/src/: lib.rs  tracing.rs
commons/oprc-invoke/: Cargo.toml
commons/oprc-invoke/src/: conn.rs  grpc.rs  handler.rs  lib.rs  local.rs  proxy.rs  route.rs  serde.rs
commons/oprc-invoke/tests/: trace_propagation_test.rs
commons/oprc-models/: Cargo.toml
commons/oprc-models/bindings/: ConsistencyModel.ts  DeploymentCondition.ts  DeploymentFilter.ts  FunctionBinding.ts  FunctionDeploymentSpec.ts  FunctionType.ts  KeySpecification.ts  OClass.ts  OClassDeployment.ts  OFunction.ts  OPackage.ts  ResourceRequirements.ts
commons/oprc-models/src/: cluster.rs  deployment.rs  enums.rs  lib.rs  nfr.rs  package.rs  runtime.rs  telemetry.rs  ts_export.rs  validation.rs
commons/oprc-observability/: Cargo.toml
commons/oprc-observability/src/: axum_layer.rs  health.rs  lib.rs  metrics.rs  middleware.rs  otel_exporter.rs  tracing.rs
commons/oprc-observability/tests/: metrics_init.rs
commons/oprc-offload/: Cargo.toml
commons/oprc-offload/src/: conn.rs  grpc.rs  lib.rs  proxy.rs  route.rs
commons/oprc-pb/: Cargo.toml  build.rs
commons/oprc-pb/proto/: oprc-data.proto  oprc-invoke.proto
commons/oprc-pb/src/: lib.rs  util.rs
commons/oprc-zenoh/: Cargo.toml  README.md
commons/oprc-zenoh/src/: lib.rs  pool.rs  rpc.rs
commons/oprc-zrpc/: Cargo.toml
commons/oprc-zrpc/src/: client.rs  error.rs  lib.rs  tracing.rs
commons/oprc-zrpc/tests/: integration_test.rs
control-plane/oprc-crm/: Cargo.toml  README.md  STATE_MACHINE_DESIGN.md  justfile
control-plane/oprc-crm/src/: collections.rs  lib.rs  main.rs  routing.rs  runtime.rs
control-plane/oprc-crm/tests/: analyzer_wiremock.rs  it_controller.rs  it_enforce.rs  it_k8s.rs  it_kind_multi.rs  it_multiple_functions.rs
control-plane/oprc-pm/: Cargo.toml  README.md  docker-compose.release.yml  docker-compose.test.yml  docker-compose.yml
control-plane/oprc-pm/config/: default.yaml  development.yaml  production.yaml
control-plane/oprc-pm/src/: bootstrap.rs  errors.rs  lib.rs  main.rs  server.rs
control-plane/oprc-pm/tests/: api_basic_integration_tests.rs  api_grpc_integration_tests.rs  availability_flow_tests.rs  bootstrap_basic_tests.rs  bootstrap_tests.rs  config_multicrm_tests.rs  config_tests.rs  deployment_mapping_tests.rs  features_multicluster_policy_tests.rs  integration_tests.rs  it_pm_crm.rs  it_storage_etcd.rs  main_tests.rs  script_artifact_tests.rs  (+3 more)
data-plane/oprc-dev/: Cargo.toml
data-plane/oprc-gateway/: Cargo.toml  README.md
data-plane/oprc-odgm/: Cargo.toml  DESIGN_INDEX.md  ENHANCED_STORAGE_TRAITS_DESIGN.md  EVENTS_TEST_SUMMARY.md  EVENT_SYSTEM_README.md  FINAL_INTEGRATION_DESIGN.md  FLEXIBLE_STORAGE_DESIGN.md  ODGM_ARCHITECTURE.md  OPENRAFT_SNAPSHOT_INTEGRATION_DESIGN.md  RAFT_STORAGE_REQUIREMENTS.md  README.adoc  REDESIGN_PLAN.md  REDESIGN_PLAN_UPDATED.md  STORAGE_ARCHITECTURE.md  STORAGE_SEPARATION_DESIGN.md  UNIFIED_SHARD_INTEGRATION_EXAMPLES.md  WASM_RUNTIME_DESIGN.md  WASM_RUNTIME_TODO.md  ZERO_COPY_SNAPSHOT_DESIGN.md  justfile  reference.adoc
data-plane/oprc-wasm/: Cargo.toml
frontend/oprc-gui/: Cargo.toml  Dioxus.toml  VISUAL_DESIGN.md  justfile  tailwind.css
oprc-cli/: Cargo.toml
oprc-cli/src/: lib.rs  main.rs  types.rs
oprc-common/: Cargo.toml
oprc-dev/: Cargo.toml
oprc-dev/src/: lib.rs  num_log.rs
oprc-gateway/: Cargo.toml
oprc-gateway/src/: conf.rs  conn.rs  error.rs  id.rs  lib.rs  main.rs  route.rs  rpc.rs
oprc-odgm/: Cargo.toml  EVENT_IMPLEMENTATION_PLAN.md  EVENT_SYSTEM_REFERENCE.md  README.adoc  reference.adoc
oprc-odgm/benches/: kv_raft_write.rs  kv_shard_write.rs
oprc-odgm/src/: cluster.rs  error.rs  lib.rs  main.rs  metadata.rs  resolver.rs  shard.rs  zrpc.rs
oprc-odgm/tests/: collection_management_test.rs  event_integration_test.rs  integration_test.rs  invocation_test.rs
oprc-pb/: Cargo.toml  build.rs
oprc-pb/proto/: oprc-data.proto  oprc-invoke.proto  oprc-route.proto
oprc-pb/src/: lib.rs
oprc-router/: Cargo.toml
oprc-router/src/: main.rs
tests/system_e2e/: Cargo.toml  IMPLEMENTATION_NOTES.md  README.md
tools/: Cargo.toml  kind-with-registry.sh
tools/examples/: scout.rs
tools/oaas-sdk-ts/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
tools/oprc-cli/: Cargo.toml  README.md  build.rs
tools/oprc-compiler/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tools/oprc-dev-server/: Cargo.toml
tools/oprc-test-utils/: Cargo.toml
tools/oprc-util-tools/: Cargo.toml
tools/pixel-canvas/: README.md  canvas.js  index.html  package-lock.json  package.json
tools/src/: lib.rs
(+721 files in other folders)
