[workspace]
resolver = "2"
members = [
    "commons/oprc-invoke", 
    "commons/oprc-zenoh", 
    "commons/oprc-dp-storage",
    "commons/oprc-grpc",
    "commons/oprc-models",
    "commons/oprc-cp-storage",
    "commons/oprc-observability",
    "commons/oprc-config",
    "commons/oprc-test-utils",
    "commons/oprc-zrpc",
    "control-plane/oprc-pm",
    "control-plane/oprc-crm",
    "data-plane/oprc-gateway",
    "data-plane/oprc-odgm",
    "data-plane/oprc-router", 
    "data-plane/oprc-dev",
    "tools/oprc-cli", 
    "frontend/oprc-gui", 
    "tests/system_e2e",
]

[workspace.package]
authors = ["Pawissanutt Lertpongrujikorn <pawissanutt@gmail.com>"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/pawissanutt/oaas-rs"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
oprc-config = { path = "commons/oprc-config" }
oprc-crm = { path = "control-plane/oprc-crm" }
oprc-cp-storage = { path = "commons/oprc-cp-storage" }
oprc-dp-storage = { path = "commons/oprc-dp-storage" }
oprc-grpc = { path = "commons/oprc-grpc" }
oprc-invoke = { path = "commons/oprc-invoke" }
oprc-models = { path = "commons/oprc-models" }
oprc-observability = { path = "commons/oprc-observability" }
oprc-pm = { path = "control-plane/oprc-pm" }
oprc-odgm = { path = "data-plane/oprc-odgm" }
oprc-test-utils = { path = "commons/oprc-test-utils" }
oprc-zenoh = { path = "commons/oprc-zenoh" }
oprc-zrpc = { path = "commons/oprc-zrpc" }
anyhow = "1.0"
anyerror = "0.1.13"
async-trait = "0.1"
axum = {version = "0.8.7"}
automerge = { version = "0.7.1", features = []}
bincode = { version = "2.0.0", features = ["serde"] }
bitcode = { version = "0.6", features = ["serde"] }
bytes = {version = "1.11.0"}
criterion = { version = "0.7" }
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "4.5.53", features = ["derive"]}
clap-stdin ={ version = "0.8.0"}
concurrent-map = "5.0"
config = "0.15.19"
crossbeam-skiplist ={ version = "0.1"}
dashmap = "6.1"
dirs = "6"
envconfig = "0.11.0"
etcd-client = { version = "0.17" }
flume = { version = "0.11", features = ["async"] }
futures = "0.3"
futures-util = "0.3"
hashbrown = "0.16.1"
http = "1.3"
merkle-search-tree = {version = "0.8.0"}
mobc = "0.9.0"
nohash-hasher = "0.2"
num_cpus = {version = "1.16"}
once_cell = "1.19"
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
opentelemetry = "0.31"
opentelemetry-jaeger = "0.22"
opentelemetry-otlp = "0.31"
prometheus = "0.14"
prost = "0.14"
prost-types = "0.14"
rand = "0.9"
lazy_static = "1.5"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
smallvec = { version = "1.0", features = ["serde"] }
scc = { version = "3.4.2" }
serial_test = "3.2"
thiserror = "2.0"
testcontainers = "0.25.2"
tokio = {version = "1.47.2", features = ["full"]}
tokio-util = { version = "0.7.17" }
tokio-stream = { version = "0.1" }
tonic = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3.22"
test-log = { version = "0.2", features = ["trace"] }
tokio-test = "0.4"
validator = { version = "0.20", features = ["derive"] }
wiremock = "0.6"
zenoh = {version = "1.6.2"}
zenoh-config = {version = "1.6.2"}
nanoid = "0.4"

# Additional dependencies found in individual packages
byteorder = "1.5"
redb = "3.0"
fjall = "2.11"
rocksdb = "0.24"
assert_cmd = "2.1"
predicates = "3.1"

# Kubernetes controller dependencies (shared)
kube = { version = "2.0.1", default-features = false, features = ["client", "runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.26", features = ["v1_34"] }
schemars = { version = "1.1.0", features = ["derive"] }
rustls = { version = "0.23.35", default-features = false, features = ["aws-lc-rs"] }

[profile.release]
lto = true
codegen-units = 1
