[package]
name = "oprc-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = {version = "4.5", features = ["derive"]}
oprc-pb = {workspace = true}
http = "1.2"
tonic = {version = "0.12"}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = {version = "1", features = ["serde"]}
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
oprc-zenoh = {workspace = true}
zenoh ={ workspace = true}
zenoh-config = {workspace = true}
prost = {version = "0.13"}