[package]
name = "oprc-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = {workspace = true}
clap-stdin ={ workspace = true}
oprc-pb = {workspace = true}
oprc-offload = {workspace = true}
http = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
oprc-zenoh = {workspace = true}
zenoh ={ workspace = true}
zenoh-config = {workspace = true}