[package]
name = "oprc-common"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hashbrown = "0.15.0"
mobc = "0.8.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
async-trait="0.1"
