[package]
name = "oprc-dev"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
prost = {workspace = true, features = ["derive"]}
oprc-pb ={ workspace=true }
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-stream = {workspace = true, features = ["sync"]}
tonic = { workspace=true }
tonic-reflection = { workspace=true }
dashmap = "6.1.0"
envconfig = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[[bin]]
name = "dev-echo-fn"

[[bin]]
name = "dev-pm"