[package]
name = "oprc-gateway"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = {workspace = true}
axum = {version = "0.7",features = ["macros"]}
# base32 = "0.5.1"
bytes = {workspace = true}
envconfig = {workspace = true}
http = {workspace = true}
mobc = {workspace = true}
oprc-offload = { workspace = true }
oprc-pb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = {workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}
zenoh = {workspace = true}
oprc-zenoh = {workspace = true}
prost = {workspace = true}
num_cpus = {workspace = true}