[package]
name = "oprc-odgm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait={workspace = true}
flare-dht = {workspace = true, features = ["raft"]}
flare-pb = {workspace = true}
flare-zrpc = {workspace = true}
oprc-pb = {workspace = true}
tokio={version = "1", features = ["full"]}
tokio-stream = { version = "0.1", features = ["sync"] }
envconfig ={workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
automerge = { version = "0.5", features = []}
mur3 = {version = "0.1"}
tonic = {workspace = true}
tonic-reflection = {workspace = true}
serde = { version = "1",features = ["derive"] }
scc = {workspace = true}
prost = {workspace = true}
thiserror = {workspace = true}
merkle-search-tree = {version = "0.8.0"}
serde_json = "1.0"
zenoh = {workspace = true}
oprc-zenoh = {workspace = true}
openraft ={ workspace = true, features = ["serde", "storage-v2"]}
bincode = {version = "2.0.0-rc.3", features = ["serde"]}
tokio-util ={ workspace = true}
flume = {workspace = true}
rand = "0.8"
concurrent-map = "5.0.4"


[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures", "async_tokio", "html_reports", "tokio"] }
# tracing-test = {version = "0.2", features = ["no-env-filter"]}
tracing-test = {version = "0.2"}

[[bench]]
name = "kv_shard_write"
harness = false