[package]
name = "oprc-pb"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["server"]}
serde = { version = "1",features = ["serde_derive"] }
bytes = "1.7.1"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
