[package]
name = "oprc-router"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
envconfig = {workspace = true}
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zenoh-config={workspace = true}
zenoh = {workspace = true}
futures-util = {workspace = true}
oprc-zenoh = {workspace = true}