[package]
name = "tools"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:tonic-reflection", "dep:oprc-pb"]
loadtest = [
    "dep:rlt","dep:anyhow", "dep:oprc-pb"
 ]

[dependencies]
anyhow = {version = "1.0.89", optional = true}
async-trait = "0.1.83"
bytes = {version = "1", features = ["serde"]}
clap = { version = "4.5.18", features = ["derive"] }
dashmap = "6.1.0"
envconfig = "0.11.0"
oprc-pb ={ workspace=true ,  optional = true}
oprc-zenoh ={ workspace = true}
prost = {version = "*", features = ["derive"]}
rand = "0.8"
rlt = {version = "0.2.1", optional = true}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = {version = "0.1", features = ["sync"]}
tonic = {version = "0.12",  optional = true}
tonic-reflection = { version = "0.12", features = ["server"] , optional = true}
tower = { version = "0.5.1", features = ["discover"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zenoh = {workspace = true}
zenoh-config = {workspace = true}

[[bin]]
name = "dev-echo-fn"

[[bin]]
name = "dev-pm"

[[bin]]
name = "bench-echo"
required-features = ["loadtest"]

[[bin]]
name = "bench-kv-set"
required-features = ["loadtest"]

[[bin]]
name = "bench-kv-get"
required-features = ["loadtest"]