[package]
name = "tools"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["loadtest"]
grpc = ["dep:tonic", "dep:oprc-pb"]
loadtest = [
    "dep:rlt","dep:anyhow", "dep:oprc-pb"
 ]

[dependencies]
anyhow = {version = "1.0.89", optional = true}
async-trait = "0.1.83"
clap = { version = "4.5.18", features = ["derive"] }
clap-stdin = {workspace = true}
envconfig = {workspace = true}
oprc-pb ={ workspace=true ,  optional = true}
oprc-zenoh ={ workspace = true}
oprc-offload = {workspace = true}
prost = {version = "*", features = ["derive"]}
rand = "0.8"
rlt = {version = "0.2.1", optional = true}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { workspace=true , optional = true}
tracing = {workspace = true}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zenoh = {workspace = true, features = ["unstable"]}
zenoh-config = {workspace = true}


[[bin]]
name = "bench-echo"
required-features = ["grpc", "loadtest"]

[[bin]]
name = "bench-kv-set"
required-features = ["loadtest"]

[[bin]]
name = "bench-kv-get"
required-features = ["loadtest"]

[[bin]]
name = "bench-no-op"
required-features = ["loadtest"]


[[bin]]
name = "bench-z-invoke"
required-features = ["loadtest"]