[package]
name = "tools"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["loadtest", "grpc"]
grpc = ["dep:tonic", "dep:oprc-pb"]
loadtest = [
    "dep:rlt","dep:anyhow", "dep:oprc-pb", "dep:serde_json",
 ]

[dependencies]
anyhow = {workspace = true, optional = true}
async-trait = {workspace = true}
clap = { workspace = true}
clap-stdin = {workspace = true}
envconfig = {workspace = true}
flume = { workspace = true }
oprc-pb ={ workspace=true ,  optional = true}
oprc-zenoh ={ workspace = true}
oprc-offload = {workspace = true}
prost = {version = "*", features = ["derive"]}
rand = {workspace = true}
rlt = {workspace = true, optional = true}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { workspace=true , optional = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true}
serde_json = {workspace = true, optional = true}
zenoh = {workspace = true, features = ["unstable"]}
zenoh-config = {workspace = true}



[[bin]]
name = "bench-kv-set"
required-features = ["loadtest"]

[[bin]]
name = "bench-kv-get"
required-features = ["loadtest"]

[[bin]]
name = "bench-no-op"
required-features = ["loadtest"]

[[bin]]
name = "bench-z-invoke"
required-features = ["loadtest"]

[[bin]]
name = "bench-g-invoke"
required-features = ["loadtest", "grpc"]


[[bin]]
name = "bench-z-invoke-origin"
required-features = ["loadtest"]