[package]
name = "oprc-dp-storage"
version = "0.1.0"
edition = "2021"

[features]
default = ["memory"]
memory = []
all = ["fjall", "skiplist"]
skiplist = ["dep:crossbeam-skiplist"]
redb = ["dep:redb"]
fjall = ["dep:fjall"]
rocksdb = ["dep:rocksdb"]

[dependencies]
# Core dependencies
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
regex = { workspace = true }

# Optional storage backends
crossbeam-skiplist = { version = "0.1", optional = true }
redb = { version = "3.0", optional = true }
fjall = { version = "2.0", optional = true }
rocksdb = { version = "0.24", optional = true }

# Testing
[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
test-log = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
rand = {version = "0.9", features = ["thread_rng", "std"]}

[[bench]]
name = "storage_backend"
harness = false