[package]
name = "oprc-dp-storage"
version = "0.1.0"
edition = "2021"

[features]
default = ["memory"]
memory = []
all = ["fjall", "skiplist", "redb"]
skiplist = ["dep:crossbeam-skiplist"]
redb = ["dep:redb"]
fjall = ["dep:fjall"]
rocksdb = ["dep:rocksdb"]

[dependencies]
# Core dependencies
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }

serde = { workspace = true, features = ["derive"] }

thiserror = { workspace = true }

bytes = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }

regex = { workspace = true }

# Optional storage backends
crossbeam-skiplist = { version = "0.1", optional = true }
redb = { version = "3.0", optional = true }
fjall = { version = "2.0", optional = true }
rocksdb = { version = "0.24", optional = true }

# Testing
[dev-dependencies]
tempfile = { workspace = true }


criterion = { workspace = true, features = ["html_reports"] }
rand = {version = "0.9", features = ["thread_rng", "std"]}


[[bench]]
name = "bench_put_operations"
harness = false

[[bench]]
name = "bench_get_operations"
harness = false

[[bench]]
name = "bench_batch_operations"
harness = false

[[bench]]
name = "bench_scan_operations"
harness = false

[[bench]]
name = "bench_snapshot_operations"
harness = false

[[bench]]
name = "bench_transaction_operations"
harness = false

[[bench]]
name = "bench_mixed_workload"
harness = false

[[bench]]
name = "bench_concurrent_operations"
harness = false
