[package]
name = "oprc-dp-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["memory"]
memory = []
all = ["fjall", "skiplist", "redb"]
skiplist = ["dep:crossbeam-skiplist"]
redb = ["dep:redb"]
fjall = ["dep:fjall"]
rocksdb = ["dep:rocksdb"]

[dependencies]
# Core dependencies
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }

serde = { workspace = true, features = ["derive"] }

thiserror = { workspace = true }

bytes = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }

regex = { workspace = true }

# Optional storage backends
crossbeam-skiplist = { workspace = true, optional = true }
redb = { workspace = true, optional = true }
fjall = { workspace = true, optional = true }
rocksdb = { workspace = true, optional = true }

# Testing
[dev-dependencies]
tempfile = { workspace = true }


criterion = { workspace = true, features = ["html_reports"] }
rand = { workspace = true, features = ["thread_rng", "std"] }


[[bench]]
name = "bench_put_operations"
harness = false

[[bench]]
name = "bench_get_operations"
harness = false

[[bench]]
name = "bench_batch_operations"
harness = false

[[bench]]
name = "bench_scan_operations"
harness = false

[[bench]]
name = "bench_snapshot_operations"
harness = false

[[bench]]
name = "bench_transaction_operations"
harness = false

[[bench]]
name = "bench_mixed_workload"
harness = false

[[bench]]
name = "bench_concurrent_operations"
harness = false
