[package]
name = "oprc-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
bytes = { workspace = true, optional = true, features = ["serde"] }

thiserror = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
util = []
bytes = ["dep:bytes"]

[lib]
name = "oprc_grpc"
path = "src/lib.rs"
