[package]
name = "oprc-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Server-side gRPC dependencies (not for WASM)
tonic = { workspace = true, optional = true }
prost = { workspace = true }
tonic-prost = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
async-trait = { workspace = true, optional = true }

# OpenTelemetry trace propagation (optional)
tonic-tracing-opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# Serialization (always available)
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
bytes = { workspace = true, optional = true, features = ["serde"] }

thiserror = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[features]
default = ["grpc", "serde"]
# gRPC feature enables tonic/tokio (server-side only, not for WASM)
grpc = ["dep:tonic", "dep:tonic-prost", "dep:tokio", "dep:async-trait"]
serde = ["dep:serde", "dep:serde_json"]
util = []
bytes = ["dep:bytes"]
# OpenTelemetry trace context propagation for gRPC clients
otel = ["grpc", "dep:tonic-tracing-opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry", "dep:tracing"]

[lib]
name = "oprc_grpc"
path = "src/lib.rs"
